--- a/index.css
+++ b/index.css
@@ -139,7 +139,14 @@ h2 {
   display: block;
   z-index: 0;
   transition: all 1.5s ease-in-out;
+}
+
+.container.animate {
   animation: jump-shaking 1s 2;
+}
+
+.container.animate-mobile {
+  transform: scale(0.5) translate(-50%, -50%);
 }
 
 .container .cover {
