New prototype with 3 part fold

--- a/index.css
+++ b/index.css
@@ -1,219 +1,180 @@
-body {
-  padding: 0;
-  margin: 0;
-  position: relative;
-	font-family: serif;
-}
-
 @keyframes jump-shaking {
-  0% { transform: translateX(0) }
-  25% { transform: translateY(-9px) }
-  35% { transform: translateY(-9px) rotate(10deg) }
-  55% { transform: translateY(-9px) rotate(-10deg) }
-  65% { transform: translateY(-9px) rotate(10deg) }
-  75% { transform: translateY(-9px) rotate(-10deg) }
-  100% { transform: translateY(0) rotate(0) }
+    0% { transform: translateX(0) }
+    25% { transform: translateY(-9px) }
+    35% { transform: translateY(-9px) rotate(10deg) }
+    55% { transform: translateY(-9px) rotate(-10deg) }
+    65% { transform: translateY(-9px) rotate(10deg) }
+    75% { transform: translateY(-9px) rotate(-10deg) }
+    100% { transform: translateY(0) rotate(0) }
 }
-
-h1 {
-  color: #666;
-  position: relative;
-  z-index: 1;
-  transition: all 1.5s ease-in-out;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f0f0f0;
+    perspective: 1000px;
+    font-family: 'Times New Roman';
+    overflow: hidden;
 }
-
-h2 {
-	font-size: 1em;
-	color: #ad2641;
-	font-weight: 500;
-	margin-bottom: 0.4em;
-	margin-top: 2em;
-	text-transform: uppercase;
+.folder {
+    cursor: pointer;
+    width: 600px;
+    height: 650px;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 2s ease-in-out;
+    animation: jump-shaking 1s 2;
 }
-
-.names {
-	margin: 0 2rem 1rem 2rem;
-	img {
-		width: 100%;
-		height: auto;
-	}
-}
-
-.wedding-date {
-	display: flex;
-	justify-content: center;
-	gap: 2em;
-	color: #747577;
-	text-transform: uppercase;
-	font-family: serif;
-
-	> div {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		padding: 0.8rem 2.5rem;
-		letter-spacing: 0.2rem;
-		font-size: 1.2rem;
-
-		border-top: 1px solid #747577;
-		border-bottom: 1px solid #747577;
-	}
-
-	.day {
-		position: relative;
-		min-width: 4em;
-		border-top: 0;
-		border-bottom: 0;
-		padding: 0;
-		color: #5b5c5e;
-
-		> div {
-			font-size: 3.5rem;
-			position: absolute;
-		}
-	}
-}
-
-.directions {
-	color: #8c8d90;
-	text-align: center;
-	margin-top: 1em;
-}
-
-.seal {
-  width: 6rem;
-  height: 6rem;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  background: #b2a34f;
-  border-radius: 100%;
-  box-shadow: 0 0 1em rgba(0, 0, 0, 0.3);
-
-  > img {
+.part {
+    position: absolute;
     width: 100%;
-    height: auto;
-  }
+    background-color: #ad2641;
+    box-sizing: border-box;
+    transition: transform 1s ease-in-out;
 }
+.top, .bottom {
+    transform-style: preserve-3d;
+}
+.top-reverse, .bottom::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    transform: rotateX(180deg);
+}
+.top { 
+    color: white;
+    top: 0;
+    z-index: 2;
+    height: 160px;
+    transform-origin: bottom;
+    background-color: #7f1b2f;
 
+    .triangle {
+        transform: rotate(0deg);
+    }
+
+    .triangle, .triangle-back {
+        position: absolute;
+        z-index: 3;
+        width: 0px;
+        height: 0px;
+        top: -79.5px;
+        border-style: solid;
+        border-width: 0 300px 80px 300px;
+        border-color: transparent transparent #a5243e transparent;
+    }
+    .triangle-back {
+        z-index: 4;
+        left: 0;
+        position: absolute;
+        transform: rotateX(360deg);
+        backface-visibility: hidden;
+        border-color: transparent transparent #7f1b2f transparent;
+    }
+    .logo {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        top: -20px;
+        position: absolute;
+        z-index: 5;
+        left: 50%;
+        transform: translateX(-50%);
+        letter-spacing: 1px;
+        backface-visibility: hidden;
+    }
+}
+.top-reverse {
+    background-color: #a5243e;  /* Orange */
+
+    .guests {
+        position: absolute;
+        top: 70%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 1.5rem;
+        font-weight: 100;
+        text-align: center;
+        letter-spacing: 2px;
+        font-style: italic;
+        backface-visibility: hidden;
+    }
+}
+.middle { 
+    top: 160px;
+    height: 500px;
+    background-color: #74182a;  /* Blue */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.bottom { 
+    z-index: 1;
+    top: 660px;
+    height: 340px;
+    transform-origin: top;
+    background-color: #7f1b2f;  /* Purple */
+}
+.bottom::after {
+    background-color: #ad2641;  /* Deep Orange */
+}
+.folder.open .top {
+    transform: rotateX(-180deg);
+    transition-delay: 1s;
+}
+.folder.open .bottom {
+    transform: rotateX(180deg);
+}
+.folder.closing .top {
+    transition-delay: 0s;
+}
+.folder.closing .bottom {
+    transition-delay: 1s;
+}
 .paper {
-  width: 40em; /* Changed from 25em */
-  height: 30em; /* Changed from 15em */
-  position: absolute;
-  display: block;
-  top: 2em;
-  left: 2.5em;
-  background: #fff;
-  -webkit-transition: 1.5s ease-in-out;
-  -moz-transition: 1.5s ease-in-out;
-  transition: all 1.5s ease-in-out;
-  z-index: 1;
-  text-align: center;
-  padding: 1em;
-  box-sizing: border-box;
-	box-shadow: 0 0 1em rgba(68, 68, 136, 0.15);
+    margin: 20px;
+    width: 560px;
+    height: 460px;
+    left: 0;
+    top: 0;
+} 
+.seal, .seal-back {
+    position: absolute;
+    top: -80px;
+    left: 50%;
+    width: 6rem;
+    height: 6rem;
+    border-radius: 100%;
+    transform: translate(-50%, -50%) rotateX(180deg);
+    background-color: #b78a59;
 }
-
-.back {
-  display: block;
-  position: relative;
-  background: #7f1b2f;
-  top: 0;
-  width: 45em; /* Changed from 30em */
-  height: 32em; /* Changed from 17em */
-  content: "";
-  -webkit-transition: 1.5s ease-in-out;
-  -moz-transition: 1.5s ease-in-out;
-  transition: all 1.5s ease-in-out;
-	box-shadow: 0 0 1em rgb(0 0 0 / 83%);
-  z-index: 0;
+.seal {
+    z-index: 3;
+    top: -80px;
 }
-
-.container {
-	cursor: pointer;
-  margin: 0 auto 0 auto;
-  padding: 15em 1em 1em 1em;
-  width: 45em; /* Changed from 30em */
-  height: 35em; /* Changed from 20em */
-  position: relative;
-  display: block;
-  z-index: 0;
-  transition: all 1.5s ease-in-out;
+.branch-left {
+    top: 5rem;
+    left: 0;
 }
-
-.container.animate {
-  animation: jump-shaking 1s 2;
+.branch-right {
+    top: 14rem;
+    right: 0;
 }
-
-.container.animate-mobile {
-  transform: scale(0.5) translate(-50%, -50%);
+.confirmation {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: auto;
+    text-align: center;
+    padding: 40px;
+    color: white;
+    letter-spacing: 1px;
+    width: 350px;
 }
-
-.container .cover {
-  position: absolute;
-  top: 0em;
-  left: 50%;
-  height: 1em;
-  display: block;
-  -moz-transform: translate(-50%, 0%) scaleY(1);
-  -webkit-transform: translate(-50%, 0%) scaleY(1);
-  transform: translate(-50%, 0%) scaleY(1);
-  -webkit-transform-origin: 0% 50%;
-  -ms-transform-origin: 0% 50%;
-  transform-origin: 0% 50%;
-  margin: 0 auto;
-  border: 22.5em solid transparent; /* Changed from 15em */
-  border-top: 15em solid #ad2641; /* Changed from 10em */
-  -webkit-transition: all 1.5s ease-in-out;
-  -moz-transition: all 1.5s ease-in-out;
-  transition: z-index 1.5s ease-in-out, transform 1.5s ease-in-out, border-top 1.5s ease-in-out;
-  transition-delay: 1.5s;
-  z-index: 500;
-}
-
-.container.open .back {
-  top: 15em; /* Changed from 10em */
-  z-index: 0;
-}
-
-.container.open .back .paper {
-  top: -20em; /* Changed from -15em */
-  z-index: 45;
-  height: 30em;
-  transition: z-index 1.5s ease-in-out, top 1.5s ease-in-out, height 1.5s ease-in-out;
-  transition-delay: 1.5s;
-}
-
-.container.open .cover {
-  border-top: 15em solid #ad2641; /* Changed from 10em */
-  -moz-transform: translate(-50%, -100%) scaleY(-1);
-  -webkit-transform: translate(-50%, -100%) scaleY(-1);
-  transform: translate(-50%, -100%) scaleY(-1);
-  z-index: 0;
-  transition-delay: 0s;
-}
-
-.container .bottom {
-  width: 0;
-  margin: 0 auto;
-  position: relative;
-  top: 0em;
-  display: block;
-  border-left: 22.5em solid #ad2641; /* Changed from 15em */
-  border-right: 22.5em solid #ad2641; /* Changed from 15em */
-  border-bottom: 10.5em solid #ad2641; /* Changed from 7em */
-  border-top: 15em solid transparent; /* Changed from 10em */
-  -webkit-transition: 1.5s ease-in-out;
-  -moz-transition: 1.5s ease-in-out;
-  transition: 1.5s ease-in-out;
-  z-index: 100;
-}
-
-.bottom-fix {
-	position: absolute;
-  z-index: 100;
-	bottom: 0;
-	width: 100%;
-	height: 7rem;
-	background: #ad2641;
+.confirmation .phones {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
 }
