Two step opening

--- a/index.css
+++ b/index.css
@@ -56,8 +56,10 @@ body {
     animation: jump-shaking 1s 2;
 }
 
-.folder.open {
-    cursor: pointer;
+.folder {
+    &.closed-top, &.closed-bottom {
+        cursor: pointer;
+    }
 }
 
 .part {
@@ -66,13 +68,11 @@ body {
     width: 600px;
     background-color: #ad2641;
     box-sizing: border-box;
-    transform-style: preserve-3d;
     transition: transform 1s ease-in-out;
 }
 
 .top-reverse,
-.bottom::after {
-    content: '';
+.bottom-reverse {
     position: absolute;
     width: 600px;
     height: 100%;
@@ -82,9 +82,9 @@ body {
 
 .top {
     color: white;
-    top: -160px;
+    top: -200px;
     z-index: 2;
-    height: 160px;
+    height: 200px;
     transform-origin: bottom;
     background-color: #7f1b2f;
 
@@ -160,30 +160,36 @@ body {
     height: 340px;
     transform-origin: top;
     background-color: #7f1b2f;
-    /* Purple */
+
+    .invite-text {
+        padding: 1rem;
+        color: white;
+        text-align: center;
+        letter-spacing: 1px;
+    }
 }
 
-.bottom::after {
+.bottom-reverse {
     z-index: 1;
     background-color: #ad2641;
     /* Deep Orange */
 }
 
-.folder.open .top {
+.folder.closed-top .top {
     transform: rotateX(-180deg);
     transition-delay: 1s;
 }
 
-.folder.open .bottom {
+.folder.closed-bottom .bottom {
     transform: rotateX(180deg);
 }
 
-.folder.closing .top {
+.folder.opening .top {
     transition-delay: 0s;
 }
 
-.folder.closing .bottom {
-    transition-delay: 1s;
+.folder.opening .bottom {
+    transition-delay: 0s;
 }
 
 .paper {
