--- a/index.css
+++ b/index.css
@@ -117,7 +117,7 @@ body {
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        top: -20px;
+        top: 0;
         position: absolute;
         z-index: 5;
         left: 50%;
