--- a/index.css
+++ b/index.css
@@ -142,6 +142,7 @@ body {
         letter-spacing: 2px;
         font-style: italic;
         backface-visibility: hidden;
+        white-space: pre-wrap;
     }
 }
 
